--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
     "useStaticServer": true,
     "condition": false
   },
-  "appid": "wx80a32a7679fb22d8",
+  "appid": "wx4c25d061502def13",
   "projectname": "%E6%AC%A2%E5%AE%9D%E7%9A%84%E5%B0%8F%E7%AA%9D",
   "libVersion": "2.22.0",
   "cloudfunctionTemplateRoot": "cloudfunctionTemplate/",
@@ -70,5 +70,6 @@
     "tabIndent": "insertSpaces",
     "tabSize": 2
   },
-  "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html"
+  "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
+  "simulatorPluginLibVersion": {}
 }
