--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,5 +1,7 @@
 {
-  "setting": {},
+  "setting": {
+    "compileHotReLoad": true
+  },
   "condition": {
     "miniprogram": {
       "list": [
@@ -64,5 +66,5 @@
   },
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "libVersion": "2.24.7",
-  "projectname": "情侣小窝"
+  "projectname": "%E6%83%85%E4%BE%A3%E5%B0%8F%E7%AA%9D"
 }
